--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,14 @@ orbs:
 jobs:
   build-and-test:
     executor: python/default
+
     steps:
       - checkout
       - python/load-cache
       - python/install-deps
       - python/save-cache
       - run:
-          command: ./manage.py test
+          command:python ./Test/WebSocket_Client_Test.py
           name: Test
 
 workflows:
