--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command:python ./Test/WebSocket_Client_Test.py test
+          command:/Test/WebSocket_Client_Test.py test
           name:Test
 
 workflows:
