--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,14 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: python ./Testpy/Websocket_Server_Test.py Test
-          name: Test
+          - name: venv Set
+              - command: |
+                  virtualenv env
+                  . env/bin/activate
+                  pip install --upgrade pip
+      - run:
+          - command: python ./JEWebSocket/Testpy/Websocket_Server_Test.py
+          - name: Test
 
 workflows:
   main:
