--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     executor: python/default
     steps:
       - checkout
-      - python/save-cache
+      - python/install-deps
       - run:
           command: python JEWebSocket/Testpy/Websocket_Server_Test.py
           name: Test
